Added Checkstyle to enforce coding standards